--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ body{
     border-radius: 15px;
     overflow-y: scroll;
 }
-.search-box::-webkit-scrollbar {
+.search-box::-webkit-scrollbar, .center::-webkit-scrollbar {
     display: none;
   }
 .s-column{
@@ -57,7 +57,7 @@ body{
     width: 1200px;
     height: 687px;
     background-color: rgb(160, 204, 186);
-    
+    overflow-y: auto;
 }
 .right{
     width:350px;
